fixed school launching